<resources>
    <string name="app_name">ALC4.0</string>
    <string name="title_activity_about_alc">About ALC</string>
    <string name="track">Track</string>
    <string name="android_name">Android</string>
    <string name="country">Country</string>
    <string name="kenya">Kenya</string>
    <string name="email">Email</string>
    <string name="mail">m.ambenge01@gmail.com</string>
    <string name="phone_no">Phone No.</string>
    <string name="phone">+254708410428</string>
    <string name="slack_username">Slack Username</string>
    <!--suppress AndroidDomInspection -->
    <string name="username">@Ambenge</string>
    <string name="main_logo">Main Logo</string>
    <string name="maxwell_ambenge">Maxwell Ambenge</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="intro_title">Introduction</string>
    <string name="obj_title">Objective</string>
    <string name="alc">Andela Learning Community</string>
    <string name="intro_desc">We’re excited to announce the launch of Andela Learning Community 4.0
        in partnership with Google and Pluralsight.
        The program will run for a period of 6 months starting from today 15th May 2019.</string>
    <string name="title_desc">Google and Pluralsight are companies that share our commitment to scale
        technology talent and learning across Africa, and we’re happy to partner with them ALC 4.0 will
        bring Andela closer to achieving its bold mission of training 100,000 software engineers across Africa in 10 years.</string>
    <string name="alc_desc">The Andela Learning Community is open to everyone interested in acquiring
        technical skills, regardless of their educational background. For this current track, participants
        will be advancing their skills in  Web development, Android development and Google Cloud technologies
        on Pluralsight. Learners who successfully complete the Google Scholarship Certification Program have the
        opportunity to go a step further to take a Google Certification exam, thereby certifying their competence and job readiness.</string>
</resources>
